# json-to-pydantic

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  build.sh  index.html  main.py  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: deploy.yml  test.yaml
json_to_pydantic/: __init__.py
json_to_pydantic/static/: index.html  main.py
json_to_pydantic/static/js/: color_modes.js
tests/: __init__.py  test_json_to_pydantic.py
wheels/: genson-1.2.2-py2.py3-none-any.whl
