[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "json_to_pydantic"
version = "0.0.1"
authors = [
  { name="Benjamin Falk", email="falk.ben@gmail.com" },
]
description = "JSON to pydantic generator"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "datamodel-code-generator",
  "pyodide-build",
  "micropip",
  "pyscript"
]

[project.optional-dependencies]
dev = [
    "pytest",
]
